# adventJS-exercises-from-midudev

./: .env  .gitignore  README.md  advent_script.sh  compile.sh  makefile  run_cpp.sh  run_py.sh  run_py_old.sh  run_ts.sh
cpp-ex/: CMakeLists.txt  CMakeUserPresets.json  conan_compile.sh
cpp-ex/src/: main.cpp
cpp-ex/src/advent/: adventEx.hpp  ex_0.cpp  ex_1.cpp  getEx.cpp  testEnvFile.cpp  testJsonLib.cpp
cpp-ex/src/adventExamples/: adventExamples.hpp  ex-0.cpp  getExample2Execute.cpp
cpp-ex/src/utils/: globals.cpp  globals.hpp  utils.cpp  utils.hpp
exercises-sheet-markdown/: day-1-sheet.md  day-10-sheet.md  day-11-sheet.md  day-12-sheet.md  day-13-sheet.md  day-14-sheet.md  day-15-sheet.md  day-16-sheet.md  day-17-sheet.md  day-18-sheet.md  day-19-sheet.md  day-2-sheet.md  day-20-sheet.md  day-21-sheet.md  day-22-sheet.md  day-23-sheet.md  day-24-sheet.md  day-25-sheet.md  day-3-sheet.md  day-4-sheet.md  day-5-sheet.md  day-6-sheet.md  day-7-sheet.md  day-8-sheet.md  day-9-sheet.md
json-data/: exData0.json  exData1.json
node-ex/: package-lock.json  package.json  tsconfig.json
node-ex/src/: entry.ts  main.ts
node-ex/src/examples/: ex-0.ts  ex_0.ts  ex_1.ts  getFunc2Execute.ts  index.ts  utils.ts
node-ex/src/utils/: custom-alias.ts  index.ts  utils.ts
py-ex/: entry.py  ex-0.py  main.py
py-ex/examples/: ex_0.py  ex_1.py
py-ex/helpers/: getExample.py  shared.py  utils.py
